--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -41,6 +41,7 @@
             <!-- <div class=".btnDiv"><button type="button" id="reset">Reset</button></div>
             <div class=".btnDiv"><button type="button" id="restart">Restart</button></div> -->
         </section>
+        <a href="../index.html">Back</a>
     </main>
 </body>
 </html>
