--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <img src="./img/countdown.png" alt="Countdown-Timer">
                 </a>
             </div>
-            <div class="button">
+            <!-- <div class="button">
                 <a href="./Tic-Tac-Toe/index.html">
                     <img src="./img/tic-tac-toe.png" alt="Tic-Tac-Toe">
                 </a>
-            </div>
+            </div> -->
             <!-- <div class="button"></div> -->
         </div>
     </main>
